2011-10-24 Maxim
- FIX:UI.Vision: Connecting the shapes while orthogonal drawing is fixed for the primitive ElFigure.


2011-10-24 Roman
- FIX:DAQ.Siemens: Multi-blocks fragments register is fixed.
- !!!:UI.VCAEngine: Selected pages, only opened and processing, enable on progect's session start for start speed increase.
    Other pages will enable at need that is use.


2011-10-23 Roman
- !!:UI.VCAEngine: Attributes at lock counter and other bit methods of widget is reordered.
    Init base attributes of session's widget is pass to the widget enable by inherit.
    Remove some messages translation on session call time.
    The allow to significant decrease overall enable session time.
- UI.VCAEngine: Final remove DB version 1 support.


2011-10-22 Roman
- UI.VCAEngine: Remove DB version 1 support.


2011-10-21 Roman
- FIX:UI.VCAEngine: User API function SessWdg::wdgAdd() is fixed for process elements list update.
- UI.VCAEngine: User's attributes modify to change "name" and "wa" is set to hot change, without full
    attribute remove.
- UI.WebCfgD: Filters for unactive images changed from "gray" to "unact".
    "unact" filter is added for light-dark unactive images.
- UI.WebVision: HTML sting encode is added to JS-code. Image convert backend function is added.
    Images resize code is moved to server side for smooth.
    Inactive button display is added. Button display borders is changed to compact.


2011-10-20 Roman
- UI.WebVision: Set global runtime window status bar value on set attribute "tipStatus" is added.


2011-10-20 Maxim
- FIX:UI.Vision: Cursor's change efter editing the element's list is fixed for the primitive ElFigure.
- FIX:UI.Vision: Moving the several shapes of the connected ones with keyboard keys is fixed for the primitive ElFigure.
- FIX:UI.Vision: Orto drawing of the shapes is fixed for the primitive ElFigure.
- UI.Vision: Connection of the shapes, while  one of them is being drawn, is added for the primitive ElFigure.


2011-10-18 Roman